# rust-pastebin

./: .env  Cargo.toml  Rocket.toml  hello-rocket
src/: lib.rs  main.rs  models.rs
